crates/compiler/test_syntax/tests/snapshots/pass/record_destructure_field_bang.expr.formatted.roc
{ launchTheNukes!, code } = config

launchTheNukes! code