crates/compiler/test_syntax/tests/snapshots/fail/record_destructure_field_bang_no_space.expr.roc
{launchTheNukes!wrong, code} = config

launchTheNukes! code
